--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,57 @@
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
 }
+
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
+body {
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+.gameBoard {
+  width: 80vw;
+  margin-top: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  gap: 20px;
+}
+.playerOne,
+.playerTwo {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  padding: 10px 40px;
+  border-radius: 20px;
+}
+
+.cards {
+  gap: 10px;
+  display: flex;
+  margin: 20px;
+  width: 100%;
+  justify-content: space-between;
+}
+.pokecard {
+  background-color: lightgray;
+  border-radius: 20px;
+  padding: 20px;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  cursor: pointer;
+}
+.winnerText {
+  color: red;
+  font-weight: bold;
+  margin: 20px;
+}
